// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/splitter/demo/collapsible.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); height: 200px;"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="ant-splitter ant-splitter-vertical"
    style="box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); height: 300px;"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/collapsible.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/control.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: 50%; flex-grow: 0;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: 50%; flex-grow: 0;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="ant-flex ant-flex-justify-space-between ant-flex-gap-middle"
  >
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          Enabled
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          Disabled
        </span>
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/splitter/demo/control.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/debug.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <h3
    class="ant-typography"
  >
    [true, 0, false]
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel ant-splitter-panel-hidden"
      style="flex-basis: 0px; flex-grow: 0;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    [false, 0, true]
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel ant-splitter-panel-hidden"
      style="flex-basis: 0px; flex-grow: 0;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    Start have min & max
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    End have min & max
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis: auto; flex-grow: 1;"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height: 100%;"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space: nowrap;"
        >
          Panel 2
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/group.tsx extend context correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height: 300px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Left
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-splitter ant-splitter-vertical"
    >
      <div
        class="ant-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            Top
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="50"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-dragger"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            Bottom
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/lazy.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-splitter ant-splitter-horizontal"
      style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
    >
      <div
        class="ant-splitter-panel"
        style="flex-basis: 40%; flex-grow: 0;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            First
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="40"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-preview"
          style="--ant-splitter-bar-preview-offset: 0px;"
        />
        <div
          class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            Second
          </h5>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-splitter ant-splitter-vertical"
      style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
    >
      <div
        class="ant-splitter-panel"
        style="flex-basis: 40%; flex-grow: 0;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            First
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="0"
        aria-valuemin="0"
        aria-valuenow="40"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-preview"
          style="--ant-splitter-bar-preview-offset: 0px;"
        />
        <div
          class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="flex-basis: auto; flex-grow: 1;"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height: 100%;"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space: nowrap;"
          >
            Second
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/lazy.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/multiple.tsx extend context correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Panel 1
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="33"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Panel 2
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="67"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Panel 3
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/multiple.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/nested-in-tabs.tsx extend context correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    aria-orientation="horizontal"
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform: translate(0px, 0px);"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
          data-node-key="1"
        >
          <div
            aria-controls="rc-tabs-test-panel-1"
            aria-selected="true"
            class="ant-tabs-tab-btn"
            id="rc-tabs-test-tab-1"
            role="tab"
            tabindex="0"
          >
            General
          </div>
        </div>
        <div
          class="ant-tabs-tab"
          data-node-key="2"
        >
          <div
            aria-controls="rc-tabs-test-panel-2"
            aria-selected="false"
            class="ant-tabs-tab-btn"
            id="rc-tabs-test-tab-2"
            role="tab"
            tabindex="-1"
          >
            Splitter Tab
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="rc-tabs-test-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        class="ant-tabs-nav-more"
        id="rc-tabs-test-more"
        style="visibility: hidden; order: 1;"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
      <div
        class="ant-tabs-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-tabs-dropdown-placement-bottomLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
      >
        <ul
          aria-label="expanded dropdown"
          class="ant-tabs-dropdown-menu ant-tabs-dropdown-menu-root ant-tabs-dropdown-menu-vertical"
          data-menu-list="true"
          id="rc-tabs-test-more-popup"
          role="listbox"
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        aria-labelledby="rc-tabs-test-tab-1"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        id="rc-tabs-test-panel-1"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/nested-in-tabs.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/size.tsx extend context correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height: 200px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis: 40%; flex-grow: 0;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="40"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/splitter/demo/vertical.tsx extend context correctly 1`] = `
<div
  class="ant-splitter ant-splitter-vertical"
  style="height: 300px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="0"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis: auto; flex-grow: 1;"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height: 100%;"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space: nowrap;"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/vertical.tsx extend context correctly 2`] = `[]`;
